Allow frontend CORS in production